# Victor-IX

./: .gitignore  README.md  ascii.txt  ascii_to_svg.py  get_blender_launcher_download.py  pyproject.toml  today.py
.github/workflows/: build.yaml
Victor_IX.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cache/: repository_archive.txt
source/: config.py  default_cube.py  get_blender_launcher_download.py  main.py  request_manager.py  today.py
source/cache/: repository_archive.json  repository_archive.txt
source/counter/: age.py  default_cube.py
source/module/: age.py  archive.py  commit.py  default_cube.py  download_count.py  followers.py  graphql.py  maya_crash.py  repo.py  request_manager.py  stars.py  svg.py  work_hours.py
